overflow issues fixed

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -12,6 +12,7 @@
 html {
     box-sizing: border-box;
     text-align: justify;
+    overflow: hidden;
 }
 
 body {
